client/main.scss
$darkText: #50576a;
$back3: #abb8e5;
$back2: #ced6fa;
$solidLightGrey: rgb(177, 177, 177);
$shadow: rgba(87, 87, 87, 0.534);
$shadow1: rgba(87, 87, 87, 0.753);
$shadow2: rgba(78, 78, 78, 0.582);
$highl: rgb(156, 165, 252);

html,
body,
#render-target {
  padding: 0;
  margin: 0;
  background-color: #e6efff;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

a:visited {
  color: inherit;
}

.page {
  padding-top: 3.5rem;
}

.navbar {
  background-color: #abb8e5;
  position: fixed;
  width: 100%;
  height: 3.5rem;
  box-shadow: 0 0.2rem 0.3rem $shadow;
}

.navbar h1 {
  margin: 0;
  padding: 0.5rem 1rem;
  font-weight: normal;
  font-family: Arial, Helvetica, sans-serif;
  color: white;
  line-height: 2.5rem;
}

.navbar a {
  color: inherit;
  text-decoration: none;
}

.contacts-list {
  display: grid;
  grid-gap: 1rem;
  margin: 2rem 0;
}

.contacts-list .contact-page {
  background-color: #ced6fa;
  list-style: none;
  padding: 1rem;
  color: #50576a;
  font-family: Arial, Helvetica, sans-serif;
}

.contacts-list .contact-page h2 {
  font-size: 1.3rem;
  font-weight: normal;
  display: grid;
  grid-gap: 0.7rem;
}

.name {
  grid-column-end: 2;
  grid-row-start: 1;
}

.details-item {
  font-size: 1rem;
  background-color: #abb8e5;
}

.details-item {
  display: grid;
  padding: 1rem;
}

.details-item-label {
  grid-column-end: 2;
}

.details-item-data {
  grid-column-start: 2;
  grid-row-start: 1;
  justify-self: end;
  font-style: italic;
}

.contact-page ul {
  padding: 0;
}

.details h3 {
  font-weight: normal;
  font-size: 1.1rem;
  margin-bottom: 0.1rem;
}

.details hr {
  color: $back3;
  border: none;
  border-top: 1px solid $back3;
  margin-bottom: 1rem;
}

.toggle-new-contact {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  border: none;
  background-color: rgb(156, 165, 252);
  color: white;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  z-index: 5000000;
  box-shadow: rgba(0, 0, 0, 0.29) 0px 3px 10px, rgba(0, 0, 0, 0.29) 0px 3px 10px;
}

.new-contact-form form {
  background-color: $back2;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 0.5rem;
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto;
  // grid-row-gap: 1rem;
}

.new-contact-form-name {
  grid-area: 1/1/2/2;
}

.new-contact-form-numbers-phone {
  grid-area: 2/1/3/2;
}

.new-contact-form-submit {
  grid-area: 1/2/3/2;
  margin: 0.5rem 0.5rem;
  justify-self: center;
  font-size: 1.5rem;
  font-weight: normal;
  width: 3rem;
  // height: 3rem;
  color: $darkText;
}

.contacts-index-page {
  display: grid;
  grid-gap: 1px;
  background-color: $solidLightGrey;
  box-shadow: 0rem 0.1rem 0.5rem $shadow;
}

.index-contact {
  background-color: $back2;
  padding: 1rem;
}

.index-contact h2 {
  display: grid;
  grid-template-columns: auto auto;
  align-items: center;
  margin: 0;
}

.index-last-contact h3 {
  font-size: 1rem;
  font-family: Arial, Helvetica, sans-serif;
  font-style: italic;
  font-weight: normal;
  color: $darkText;
  margin: 0;
  justify-self: end;
  margin-right: 1rem;
}

.index-last-contact {
  justify-self: end;
}

.index-contact a {
  font-weight: lighter;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  color: $darkText;
}

